fix: font color during dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,11 @@ body.dark .subtitle {
   text-align: center;
 }
 
+/* Dark mode toggle button */
+.darkmode-toggle {
+  margin: 2rem;
+}
+
 /* Navigation */
 .nav-button {
   width: 150px;
