--- a/src/pages/aboutme/aboutpage.css
+++ b/src/pages/aboutme/aboutpage.css
@@ -29,26 +29,26 @@
 } */
 
 .about-text {
-    display: flex;
-    flex-direction: column;
-    max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  max-width: 700px;
 }
 
 .about-text p {
-    margin: 1rem 3rem;
-    max-width: 600px;
+  margin: 1rem 3rem;
+  max-width: 600px;
 }
 
 .about-photo {
-    width: 100%;
-    max-width: 600px;
-    height: auto;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
 }
 
 .connect-sticker {
-    width: 300px;
-    display: block;
-    margin: 0 auto;
+  width: 300px;
+  display: block;
+  margin: 0 auto;
 }
 
 .connect-sticker:hover  {
@@ -81,22 +81,27 @@
 }
 
 .question-card {
-    text-align: center;
-    padding: 2rem 4rem;
-    background-color: #ebe8d3;
-    max-width: 50%;
-    display: block;
-    margin: 0 auto 3rem;
-    border-radius: 11%;
+  text-align: center;
+  padding: 2rem 4rem;
+  background-color: #ebe8d3;
+  max-width: 50%;
+  display: block;
+  margin: 2rem auto;
+  border-radius: 6%;
+}
+
+.question-card p {
+  color: black;
+  font-size: 0.9rem;
 }
 
 .faq-photo {
-    width: 100%;
-    max-width: 450px;
-    height: auto;
-    display: row;
-    margin: 0 auto;
-    padding: 10px;
+  width: 100%;
+  max-width: 450px;
+  height: auto;
+  display: row;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 a {
@@ -147,6 +152,7 @@ a {
 
   .question-card p {
     font-size: clamp(0.9rem, 1vw, 2rem);
+    color: black;
   }
 
   .faq-photo {
